vpc.tf
resource "aws_vpc" "MYVPC1" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "MYVPC1"
  }
}
